--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "build": "npx tsc",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q ./bin/www\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q ./bin/www\"",
+    "format": "npx prettier --write ."
   },
   "dependencies": {
     "bootstrap": "^5.3.0-alpha1",
