--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "ejs-lint": "^2.0.0",
+    "eslint": "^8.33.0",
     "express": "^4.18.2",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
